# navigation-app-backend

./: .gitignore  README.md  pyproject.toml
notebooks/: shortest_paths.ipynb
notebooks/scraps/: 001-shortest_paths.ipynb  003-imitation-demo.ipynb  004-creating_gym_env.ipynb  005-irl-gym-env.ipynb  007-small-irl-graph.ipynb  009-small-irl-graph.py  010-small-graph-irl-imitation.py  011-irl-demo.py  012-scrap-numpy-code.py  astar-via-waypoint.ipynb  creating_gym_env.ipynb  imitation-demo.ipynb  shortest_paths.ipynb
notebooks/scraps/utils/: adjacency_matrix.py
src/: app.py
src/route/: navigation.py
src/service/navigation/: crow.py  map.py  simple_navigation.py
src/types/: coordinates.py
