[tool.poetry]
name = "navigation-app-backend"
version = "0.1.0"
description = ""
authors = ["Jack Contro <jack.contro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
osmnx = "^1.7.0"
geopandas = "^0.14.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
imitation = "^1.0.0"
gym = "^0.26.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
